--- a/app/src/main/res/layout/calendar_view.xml
+++ b/app/src/main/res/layout/calendar_view.xml
@@ -3,77 +3,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp">
+    android:background="#1CFF956F"
+    android:paddingHorizontal="24dp"
+    android:paddingTop="20dp"
+    android:paddingBottom="14dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/ll_month"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
+        android:layout_alignParentStart="true">
 
         <ImageButton
             android:id="@+id/ib_month_prev"
-            android:layout_width="20dp"
+            android:layout_width="30dp"
             android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
             android:background="@drawable/bg_button_press"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:scaleType="centerInside"
             android:src="@drawable/ic_arrow_left_grey_16" />
 
         <TextView
-            android:id="@+id/tv_month"
+            android:id="@+id/tv_month_year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:layout_marginHorizontal="3dp"
+            android:layout_toStartOf="@id/ib_month_next"
+            android:layout_toEndOf="@id/ib_month_prev"
+            android:gravity="center"
             android:textColor="@color/secondary_40"
             android:textSize="16sp"
-            tools:text="Tháng 8" />
+            tools:text="Tháng 8/2022" />
 
         <ImageButton
             android:id="@+id/ib_month_next"
-            android:layout_width="20dp"
+            android:layout_width="30dp"
             android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
             android:background="@drawable/bg_button_press"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:scaleType="centerInside"
             android:src="@drawable/ic_arrow_right_grey_16" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_year"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/ib_year_prev"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:background="@drawable/bg_button_press"
-            android:scaleType="centerInside"
-            android:src="@drawable/ic_arrow_left_grey_16" />
-
-        <TextView
-            android:id="@+id/tv_year"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
-            android:textColor="@color/secondary_40"
-            android:textSize="16sp"
-            tools:text="2022" />
-
-        <ImageButton
-            android:id="@+id/ib_year_next"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:background="@drawable/bg_button_press"
-            android:scaleType="centerInside"
-            android:src="@drawable/ic_arrow_right_grey_16" />
-
-    </LinearLayout>
+    </RelativeLayout>
 
     <View
         android:id="@+id/v_line"
