--- a/app/src/main/res/layout/row_recycler_view_day_select.xml
+++ b/app/src/main/res/layout/row_recycler_view_day_select.xml
@@ -21,4 +21,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/v_row_recycler_view_day_select_notify"
+        android:layout_width="4dp"
+        android:layout_height="4dp"
+        android:background="@drawable/bg_circle_red"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/row_recycler_view_day_select_tvDay" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
