--- a/app/src/main/res/layout/activity_calendar_educa.xml
+++ b/app/src/main/res/layout/activity_calendar_educa.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".educa.CalendarEducaActivity">
+    tools:context=".CalendarEducaActivity">
 
-    <com.example.datepickerdemo.educa.view.CollapsibleCalendarView
+    <com.example.calendarview.view.CollapsibleCalendarView
         android:id="@+id/calendar_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
