--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
     <color name="picker_divider_color">#E0E0E0</color>
     <color name="pink">#F1DAFF</color>
     <color name="pink_highlight">#A970E2</color>
+    <color name="orange">#DA744F</color>
 </resources>
