--- a/app/src/main/res/values/rounded_barchart.xml
+++ b/app/src/main/res/values/rounded_barchart.xml
@@ -2,5 +2,6 @@
 <resources>
     <declare-styleable name="RoundedBarChart">
         <attr name="radius" format="float" />
+        <attr name="evaluate_button_color" format="color|reference" />
     </declare-styleable>
 </resources>
