--- a/app/src/main/res/layout/activity_chart.xml
+++ b/app/src/main/res/layout/activity_chart.xml
@@ -10,6 +10,7 @@
         android:layout_height="300dp"
         android:layout_alignParentStart="true"
         android:layout_marginTop="16dp"
+        app:label_highlight_color="@color/label_highlight_color"
         app:radius="20" />
 
 </RelativeLayout>
