--- a/app/src/main/res/layout/activity_chart.xml
+++ b/app/src/main/res/layout/activity_chart.xml
@@ -12,4 +12,31 @@
         app:label_highlight_color="@color/label_highlight_color"
         app:radius="20" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/secondary_40">
+
+        <TextView
+            android:id="@+id/a"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_centerInParent="true"
+            android:layout_toLeftOf="@+id/b"
+            android:background="@android:color/holo_red_dark"
+            android:text="ewjfoiewjfiew" />
+
+        <TextView
+            android:id="@+id/b"
+            android:visibility="visible"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:text="ewdfrg"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:background="@android:color/holo_orange_dark" />
+
+    </RelativeLayout>
+
 </RelativeLayout>
